cours20-reseautique/deploy/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx

        ### Version locale Docker Desktop
        # Utiliser la dernière image locale buildée
        # image: node1:latest
        # imagePullPolicy: Never

        ### Version GKE
        # Utiliser un tag spécifique du Artifact Registry
        # Forcer le téléchargement de l'image afin d'éviter d'utiliser des mauvaises images
        # image: <ACTIFACT_REGISTRY_URL>/nginx:1.0 # TODO: Remplacer avec le chemin de votre image
        image: us-east1-docker.pkg.dev/h25-4d4-24/test-repo/nginx:1.0
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  # type: NodePort
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30000
